test/depCond8.slq

def foo(){
	x:=H(0);
	y:=dup(x);
	if measure(H(0)){
		z:=dup(y);
		forget(y); /// error
		forget(z); /// error
		return (x,0);
	}
	return (x,y);
}
